# Lazy-Gamer-Helper

./: .gitignore  LICENSE  README.md  podman-compose.yml  pyproject.toml
data/: README.md
src/: main.py
src/lghelper/stores/: __init__.py  steamv1.py
src/ragjojo/stores/: __init__.py  steamv1.py
