[project]
name = "lazy gamer helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Virrann",email = "cunha.vargas.oliveira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "selenium (>=4.38.0,<5.0.0)",
    "langchain (>=1.0.4,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "pymongo (>=4.15.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "lazy gamer helper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
